--- a/motor-policies-list.html
+++ b/motor-policies-list.html
@@ -82,9 +82,9 @@
                   <div class="form-header">
                     <p>New user? <span class="primary-color-text create-account" data-toggle="modal" data-target="#signup-modal">Create an account</span></p>
                     <div class="form-group mt-2 mb-2 clearfix tooltipster" title="Enter what you believe is the current resale value. Remember to consider depreciation, and that this value will be subject to insurer approval. We have provided an estimation below to help. Remember that a higher valuation means a higher insurance price. The value is only relevant if your car is a total write-off.">
-                      <label for="car_value">Username or Email</label>
+                      <label for="car_value">Email</label>
                       <div class="input-group mb-2">
-                        <input type="text" class="form-control" name="username" id="username">
+                        <input type="email" class="form-control" name="username" id="username">
                       </div>
                       <div class="validation">Validation message goes here..</div>
                     </div>
@@ -104,7 +104,7 @@
                     <input type="submit" class="btn" name="signin" id="signin" value="Sign in">
                     <div class="social-login d-flex flex-column justify-content-center align-items-center">
                       <p>Or sign in with</p>
-                      <div class="social-links"> <a href="#" class="twitter"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> <a href="#" class="instagram"><i class="fa fa-instagram"></i></a> <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a> </div>
+                     <div class="social-links"> <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>  <a href="#" class="google"><i class="fa fa-google"></i></a> </div>
                     </div>
                   </div>
                 </form>
@@ -155,9 +155,9 @@
                       </div>
                     </div>
                     <div class="form-group mt-2 mb-2 clearfix tooltipster" title="Enter what you believe is the current resale value. Remember to consider depreciation, and that this value will be subject to insurer approval. We have provided an estimation below to help. Remember that a higher valuation means a higher insurance price. The value is only relevant if your car is a total write-off.">
-                      <label for="car_value">Username or Email</label>
+                      <label for="car_value">Email</label>
                       <div class="input-group mb-2">
-                        <input type="text" class="form-control" name="username" id="username">
+                        <input type="email" class="form-control" name="username" id="username">
                       </div>
                       <div class="validation"></div>
                     </div>
@@ -184,7 +184,7 @@
                     <input type="submit" class="btn" name="signin" id="signin" value="Sign in">
                     <div class="social-login d-flex flex-column justify-content-center align-items-center">
                       <p>Or sign in with</p>
-                      <div class="social-links"> <a href="#" class="twitter"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> <a href="#" class="instagram"><i class="fa fa-instagram"></i></a> <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a> </div>
+                      <div class="social-links"> <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>  <a href="#" class="google"><i class="fa fa-google"></i></a> </div>
                     </div>
                   </div>
                 </form>
